--- a/public/html/app_shell/footer-nav.html
+++ b/public/html/app_shell/footer-nav.html
@@ -1,17 +1,21 @@
 <ul class="nav footer-navbar justify-content-center fixed-bottom nav-fill">
-    <li class="nav-item">
-      <a class="btn btn-primary" href="/html/dailyChallenges.html"><i class="fa-solid fa-circle-check"></i></a>
-    </li>
-    <li class="nav-item">
-      <a class="btn btn-primary" href="/html/groups.html"><i class="fa-solid fa-user-group"></i></a>
-    </li>
-    <li class="nav-item">
-      <a class="btn btn-primary" href="/html/home.html"><i class="fa-solid fa-house"></i></a>
-    </li>
-    <li class="nav-item">
-      <a class="btn btn-primary" href="/html/search.html"><i class="fa-solid fa-magnifying-glass"></i></a>
-    </li>
-    <li class="nav-item">
-      <a class="btn btn-primary" href="/html/profile.html"><i class="fa-solid fa-circle-user"></i></a>
-    </li>
+  <li class="nav-item">
+    <a class="btn btn-primary" href="/html/dailyChallenges.html"
+      ><i class="fa-solid fa-circle-check"></i
+    ></a>
+  </li>
+  <li class="nav-item">
+    <a class="btn btn-primary" href="/html/groups.html"><i class="fa-solid fa-user-group"></i></a>
+  </li>
+  <li class="nav-item">
+    <a class="btn btn-primary" href="/html/search.html"
+      ><i class="fa-solid fa-magnifying-glass"></i
+    ></a>
+  </li>
+  <li class="nav-item">
+    <a class="btn btn-primary" href="/html/stats.html"><i class="fa-solid fa-chart-simple"></i></a>
+  </li>
+  <li class="nav-item">
+    <a class="btn btn-primary" href="/html/profile.html"><i class="fa-solid fa-circle-user"></i></a>
+  </li>
 </ul>
