--- a/public/html/app_shell/footer-nav.html
+++ b/public/html/app_shell/footer-nav.html
@@ -13,7 +13,9 @@
     ></a>
   </li>
   <li class="nav-item">
-    <a class="btn btn-primary" href="/html/stats.html"><i class="fa-solid fa-chart-simple"></i></a>
+    <a class="btn btn-primary" href="/html/stats.html">
+      <span class="material-symbols-outlined"> bar_chart </span></a
+    >
   </li>
   <li class="nav-item">
     <a class="btn btn-primary" href="/html/profile.html"><i class="fa-solid fa-circle-user"></i></a>
