--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -2,10 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/css/profile.css">
-
     <script type="module" src="/scripts/app_shell.js"></script>
-
+    <link rel="stylesheet" href="/css/profile.css">
 </head>
 
 <body>
@@ -27,7 +25,7 @@
                             <div class="user-profile">
                                 <div class="user-avatar">
                                     <!-- Profile Image -->
-                                    <img id="profileImage" src="/assets/images/profile-icon.png" alt="Profile Image">
+                                    <img id="profileImage" src="/assets/images/profile-icon.png" alt="Profile Image" width="100%">
                                     
                                     <!-- Upload Button -->
                                     <label for="imageUpload" id="imageUploadButton" class="btn m-auto mt-3 gbtn btn-secondary">Upload Image</label>
