--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Profile</title>
     <script type="module" src="/scripts/app_shell.js"></script>
     <link rel="stylesheet" href="/css/profile.css">
 </head>
@@ -25,7 +26,7 @@
                             <div class="user-profile">
                                 <div class="user-avatar">
                                     <!-- Profile Image -->
-                                    <img id="profileImage" src="/assets/images/profile-icon.png" alt="Profile Image" width="100%">
+                                    <img id="profileImage" src="/assets/images/profile-icon.png" alt="Profile Image">
                                     
                                     <!-- Upload Button -->
                                     <label for="imageUpload" id="imageUploadButton" class="btn m-auto mt-3 gbtn btn-secondary">Upload Image</label>
