--- a/public/html/404.html
+++ b/public/html/404.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> </head>
+  <head>
+    <title>404 - Page Not Found</title>
+  </head>
   <body>
     <header>
       <div id="nav_bar"></div>
