--- a/public/html/dailyChallenges.html
+++ b/public/html/dailyChallenges.html
@@ -13,7 +13,10 @@
     <main>
       <div class="container">
               <h1>Daily Challenges</h1>
-              <div id="dailyChallenges-go-here">
+              <div id="dailyChallenges-go-here"></div>
+              <div class="text-center  mb-4">
+                <a type="button" id="editPrivateInfo" href="addNewPrivateEcoAction.html" class="btn gbtn btn-secondary">Add private Ecoaction</a>
+              </div>
       </div>
 
       <template id="challengeTemplate">
