add banner image functionality to ecoactions

--- a/public/html/addNewPrivateEcoAction.html
+++ b/public/html/addNewPrivateEcoAction.html
@@ -14,11 +14,11 @@
               <img id="imagePreview" src="" alt="Image Preview" class="m-auto img-fluid" />
             </div>
             <div class="mb-3">
-              <label for="imageInput" class="form-label">Select an image for the banner</label>
+              <label for="bannerImage" class="form-label">Select an image for the banner</label>
               <input
                 type="file"
                 class="form-control"
-                id="imageInput"
+                id="bannerImage"
                 name="image"
                 accept="image/*" />
             </div>
