--- a/public/html/dailyChallenges.html
+++ b/public/html/dailyChallenges.html
@@ -43,7 +43,7 @@
               <!-- Description on the right, or below image (on smaller screens) -->
               <div class="col-12 col-md-6">
                 <div class="image-clip">
-                  <img src="/assets/images/hike1.jpg" class="card-img-top" alt="Community Cleanup" />
+                  <img src="/assets/images/hike1.jpg" class="bannerImage" class="card-img-top" alt="Community Cleanup" />
                 </div>
               </div>
             </div>
