refactor: replace daily challenges with ecoactions and update routing for ecoactions retrieval

--- a/public/html/app_shell/footer-nav.html
+++ b/public/html/app_shell/footer-nav.html
@@ -1,6 +1,6 @@
 <ul class="nav footer-navbar justify-content-center fixed-bottom nav-fill">
   <li class="nav-item">
-    <a class="btn btn-primary" href="/html/dailyChallenges.html"
+    <a class="btn btn-primary" href="/html/ecoactions.html"
       ><i class="fa-solid fa-circle-check"></i
     ></a>
   </li>
