--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -24,7 +24,7 @@
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
           <li><a class="dropdown-item" href="/html/profile.html">Profile</a></li>
           <!-- <li><a class="dropdown-item" href="/html/settings_disabled.html">Settings</a></li> -->
-          <li><a class="dropdown-item" href="/html/daily_challenges.html">Demo</a></li>
+          <li><a class="dropdown-item" href="/html/ecoactions.html">Demo</a></li>
           <li><a class="dropdown-item" href="/html/help.html">Help</a></li>
           <li><hr class="dropdown-divider" /></li>
           <li><button type="button" class="dropdown-item signOut">Sign Out</button></li>
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav m-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/html/dailyChallenges.html">Daily Challenges</a>
+          <a class="nav-link" href="/html/ecoactions.html">Ecoactions</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/html/home.html">Home</a>
