--- a/public/html/ecoactions.html
+++ b/public/html/ecoactions.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Daily Challenges</title>
-    <link rel="stylesheet" href="/css/dailyChallenges.css" />
+    <link rel="stylesheet" href="/css/ecoactions.css" />
   </head>
 
   <body>
@@ -61,6 +61,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       defer></script>
     <script type="module" src="/scripts/app_shell.js"></script>
-    <script type="module" src="/scripts/dailyChallenges.js"></script>
+    <script type="module" src="/scripts/ecoactions.js"></script>
   </body>
 </html>
