--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -29,13 +29,14 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <link rel="stylesheet" href="/css/stats.css" />
+    <script type="module" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/scripts/load-component.js"></script>
   </head>
   <body>
     <header id="nav_bar"></header>
 
     <h1>My Stats</h1>
-    <div id="container"></div>
+    <div id="container"><canvas id="completed-ecoaction-count"></canvas></div>
 
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
