style ecoactions and stats pages

--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -35,8 +35,15 @@
   <body>
     <header id="nav_bar"></header>
 
-    <h1>My Stats</h1>
-    <div id="container"><canvas id="completed-ecoaction-count"></canvas></div>
+    <main>
+      <h1>My Stats</h1>
+
+      <div id="stats-container">
+        <div id="completed-ecoaction-count-wrapper">
+          <canvas id="completed-ecoaction-count"></canvas>
+        </div>
+      </div>
+    </main>
 
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
