--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -34,9 +34,9 @@
 
     <!-- Navbar items -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav m-auto mb-2 mb-lg-0 gap-2">
         <li class="nav-item">
-          <a class="nav-link" href="/html/ecoactions.html">Ecoactions</a>
+          <a class="nav-link" href="/html/ecoactions.html">EcoActions</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/html/home.html">Home</a>
