--- a/public/html/ecoactions.html
+++ b/public/html/ecoactions.html
@@ -12,7 +12,9 @@
 
     <main>
       <div class="container">
-        <h1>Daily Challenges</h1>
+        <div class="text-center">
+          <h1>Ecoactions</h1>
+        </div>
         <div id="dailyChallenges-go-here"></div>
         <div class="text-center mb-4">
           <a
