feat: implement finish ecoaction page and update ecoactions display with new button functionality

--- a/public/html/ecoactions.html
+++ b/public/html/ecoactions.html
@@ -33,7 +33,7 @@
               </div>
           
               <!-- Right side: Finish Button -->
-              <a href="finish_challenge.html" class="btn gbtn btn-primary btn-sm">Finish</a>
+              <button class="btn gbtn btn-primary btn-sm finishEcoactionButton">Finish</button>
             </div>
           
             <p class="mb-0 shortDescription">Short description</p>
