style: enhance finish ecoaction page with dynamic text and background colors

--- a/public/html/finishEcoaction.html
+++ b/public/html/finishEcoaction.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 mt-4">
-          <div class="text-center">
+          <div class="text-center mb-3">
             <div id="bannerImage">
               <h1 id="name" class="m-0 p-0">Ecoaction Name</h1>
 
