--- a/public/html/ecoactions.html
+++ b/public/html/ecoactions.html
@@ -13,9 +13,12 @@
     <main>
       <div class="container">
         <div class="text-center">
-          <h1>Ecoactions</h1>
+          <h1 class="m-0">Ecoactions</h1>
         </div>
         <div id="dailyChallenges-go-here"></div>
+        <div class="text-center">
+          <a type="button" href="/html/groups.html" class="btn btn-lg gbtn btn-secondary mb-2">Add Ecoactions</a>
+        </div>
       </div>
 
       <template id="challengeTemplate">
