--- a/public/html/finishEcoaction.html
+++ b/public/html/finishEcoaction.html
@@ -52,12 +52,7 @@
                 rows="3"></textarea>
             </div>
             <div class="text-center">
-              <a
-                type="submit"
-                href="/html/finishAnimation.html"
-                class="btn btn-lg gbtn btn-secondary mb-2"
-                >Finish</a
-              >
+              <button type="button" id="finishBtn" class="btn btn-lg gbtn btn-secondary mb-2">Finish</a>
             </div>
           </form>
         </div>
