feat: implement post ecoaction functionality and update finish ecoaction flow

--- a/public/html/finishEcoaction.html
+++ b/public/html/finishEcoaction.html
@@ -31,11 +31,11 @@
               <img hidden id="imagePreview" src="" alt="Image Preview" class="m-auto img-fluid" />
             </div>
             <div class="mb-3">
-              <label for="imageInput" class="form-label">Select an Image to Post</label>
+              <label for="image" class="form-label">Select an Image to Post</label>
               <input
                 type="file"
                 class="form-control"
-                id="imageInput"
+                id="image"
                 name="image"
                 accept="image/*" />
             </div>
@@ -44,15 +44,15 @@
               <input type="text" class="form-control" id="title" name="title" />
             </div>
             <div class="mb-3">
-              <label for="description" class="form-label">Description</label>
+              <label for="postDescription" class="form-label">Description</label>
               <textarea
                 class="form-control"
-                id="description"
+                id="postDescription"
                 name="description"
                 rows="3"></textarea>
             </div>
             <div class="text-center">
-              <button type="button" id="finishBtn" class="btn btn-lg gbtn btn-secondary mb-2">Finish</a>
+              <button type="button" id="finishBtn" class="btn btn-lg gbtn btn-secondary mb-2">Finish</button>
             </div>
           </form>
         </div>
