Groups stuff, sprint #4 👍

--- a/public/html/group.html
+++ b/public/html/group.html
@@ -19,6 +19,11 @@
     <div class="container">
       <h1><span id="groupName">this hike</span></h1>
       <br />
+      <h2><b>ACTIONS</b></h2>
+      <span id="groupActions" style="white-space: pre-line;"></span>
+      <br>
+      <hr>
+      <br>
       <h2><b>USERS</b></h2>
       <span id="groupUsers" style="white-space: pre-line"></span>
     </div>
