--- a/public/html/group_creation.html
+++ b/public/html/group_creation.html
@@ -28,6 +28,7 @@
                     id="profileImage"
                     src="https://bootdey.com/img/Content/avatar/avatar1.png"
                     alt="Maxwell Admin" />
+                    <span>PLACEHOLDER - IMAGE SELECTOR WILL GO HERE</span>
                 </div>
                 <div class="form-group">
                   <input
@@ -35,6 +36,12 @@
                     class="form-control publicInfoField"
                     id="groupName"
                     placeholder="Enter group name" />
+                </div>
+                <div class="form-group">
+                  <span>PLACEHOLDER - ECOACTION SELECTOR WILL GO HERE</span>
+                </div>
+                <div class="form-group">
+                  <span>PLACEHOLDER - INVITE FRIENDS WILL GO HERE</span>
                 </div>
               </div>
             </div>
