refactor: rename points to ecoPoints and update ecoaction completion endpoint

--- a/public/html/ecoactions.html
+++ b/public/html/ecoactions.html
@@ -30,7 +30,7 @@
                 <h5 class="mb-0 title">Challenge 1</h5>
 
 
-                <p class="points m-0 mt-1 ms-2"></p>
+                <p class="ecoPoints m-0 mt-1 ms-2"></p>
                 <img src="/assets/images/coin.png" class="mr-1 coin"> 
 
               </div>
