--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -52,6 +52,9 @@
       loadComponent("footer-nav", "/html/app_shell/footer-nav.html");
       loadComponent("footer", "/html/app_shell/footer.html");
     </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      defer></script>
     <script type="module" src="/scripts/stats.js"></script>
   </body>
 </html>
