--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -1,6 +1,6 @@
 <nav id="nav" class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/html/home.html">
+    <a class="navbar-brand" href="/html/ecoactions.html">
       <img id="logo" src="/assets/images/logo.svg" height="36" />
       EcoAction
     </a>
@@ -37,9 +37,6 @@
       <ul class="navbar-nav m-auto mb-2 mb-lg-0 gap-2">
         <li class="nav-item">
           <a class="nav-link" href="/html/ecoactions.html">EcoActions</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/html/home.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/html/groups.html">Groups</a>
