--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Groups</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
@@ -11,17 +12,17 @@
       rel="stylesheet"
       href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
+    <link rel="stylesheet" href="/css/groups.css" />
   </head>
   <body>
-    <!-- Templates for general use, not displayed -->
     <template id="groupCardTemplate">
       <div class="card py-2 mx-2" style="width: 18rem">
-
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-members">Group members</p>
+          <h5 class="card-title"></h5>
+          <p class="card-members"></p>
           <br />
-          <p class="card-text">Lorem ipsum or something.</p>
+          <p class="card-text"></p>
           <a class="btn btn-primary card-href">Read more ...</a>
         </div>
       </div>
@@ -29,32 +30,19 @@
 
     <header id="nav_bar"></header>
 
-    <!-- BODY -->
-
-    
-
-    <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center">
-      <h1 class="container">Groups</h1>
+    <div id="h1-container" class="d-flex align-items-left">
+      <h1>Groups</h1>
+      <a id="create-new" class="green-button" href="group_creation.html">Create New</a>
     </div>
 
-    <br>
-
-    <a class="btn btn-primary card-href" href="group_creation.html">Create New</a>
-
-    <br>
-
-    <div class="container">
-      <!-- Here is the container for cards  -->
-      <div class="container">
-        <div id="groups-go-here" class="row row-cols-auto"></div>
+    <main>
+      <div class="d-flex align-items-center">
+        <div class="container">
+          <div id="groups-go-here" class="row row-cols-auto"></div>
+        </div>
       </div>
-    </div>
+    </main>
 
-    <br>
-
-    
-
-    <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
 
@@ -62,7 +50,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       defer></script>
     <script type="module" src="/scripts/app_shell.js"></script>
-
     <script type="module" src="/scripts/groups.js"></script>
   </body>
 </html>
