--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
+    <title>Welcome</title>
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/app_shell/navbar.css" />
   </head>
 
   <body>
-    <header>
-      <!-- <div id="nav_bar"></div> -->
-    </header>
+    <header></header>
 
     <main class="container">
-      <div class="p-5 mb-4 rounded-3">
+      <div class="p-5 pb-3 rounded-5">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Welcome to EcoAction</h1>
           <p class="col-md-8 fs-4">
             Join us in making a difference for our planet. Start your eco-friendly journey today!
           </p>
-          <button
-            onclick="window.location.href='/login'"
-            class="btn btn-dark bg-success btn-lg"
-            type="button">
-            Login/Signup
+          <button onclick="window.location.href='/login'" id="login" type="button">
+            Login / Signup
           </button>
         </div>
       </div>
@@ -80,7 +75,6 @@
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
 
-    <!-- JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       defer></script>
