footer nav styling, delete unused components

--- a/public/html/app_shell/footer-nav.html
+++ b/public/html/app_shell/footer-nav.html
@@ -1,23 +1,21 @@
-<ul class="nav footer-navbar justify-content-center fixed-bottom nav-fill">
-  <li class="nav-item">
-    <a class="btn btn-primary" href="/html/ecoactions.html"
-      ><i class="fa-solid fa-circle-check"></i
-    ></a>
+<ul id="footer-nav-list">
+  <li>
+    <a href="/html/ecoactions.html">
+      <i data-lucide="circle-check-big"></i>
+    </a>
   </li>
-  <li class="nav-item">
-    <a class="btn btn-primary" href="/html/groups.html"><i class="fa-solid fa-user-group"></i></a>
+  <li>
+    <a href="/html/groups.html"><i data-lucide="users"></i></a>
   </li>
-  <li class="nav-item">
-    <a class="btn btn-primary" href="/html/search.html"
-      ><i class="fa-solid fa-magnifying-glass"></i
-    ></a>
+  <li>
+    <a href="/html/search.html"><i data-lucide="search"></i></a>
   </li>
-  <li class="nav-item">
-    <a class="btn btn-primary" href="/html/stats.html">
-      <span class="material-symbols-outlined"> bar_chart </span></a
-    >
+  <li>
+    <a href="/html/stats.html">
+      <i data-lucide="chart-line"></i>
+    </a>
   </li>
-  <li class="nav-item">
-    <a class="btn btn-primary" href="/html/profile.html"><i class="fa-solid fa-circle-user"></i></a>
+  <li>
+    <a href="/html/profile.html"><i data-lucide="circle-user-round"></i></a>
   </li>
 </ul>
