Semi-annual push - Finalized Group Creation Page

--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -22,8 +22,8 @@
           <h5 class="card-title"></h5>
           <p class="card-members"></p>
           <br />
-          <p class="card-text"></p>
-          <a class="btn btn-primary card-href">Read more ...</a>
+          <p class="card-text">Lorem ipsum or something.</p>
+          <a class="btn btn-primary card-href">See More</a>
         </div>
       </div>
     </template>
@@ -35,14 +35,24 @@
       <a id="create-new" class="green-button" href="group_creation.html">Create New</a>
     </div>
 
-    <main>
-      <div class="d-flex align-items-center">
-        <div class="container">
-          <div id="groups-go-here" class="row row-cols-auto"></div>
-        </div>
-      </div>
-    </main>
+    <hr>
 
+    <a class="btn btn-primary card-href" href="group_creation.html">Create New</a>
+
+    <hr>
+
+    <div class="container">
+      <!-- Here is the container for cards  -->
+      <div class="container">
+        <div id="groups-go-here" class="row row-cols-auto"></div>
+      </div>
+    </div>
+
+    <hr>
+
+    
+
+    <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
 
