--- a/public/html/group.html
+++ b/public/html/group.html
@@ -19,7 +19,7 @@
     <div class="container">
       <h1><span id="groupName">this hike</span></h1>
       <br />
-      <h2><b>ACTIONS</b></h2>
+      <h2><b>CURRENT ACTION</b></h2>
       <span id="groupActions" style="white-space: pre-line;"></span>
       <br>
       <hr>
