feat(finishEcoaction): enable button based on input validation and adjust styles

--- a/public/html/finishEcoaction.html
+++ b/public/html/finishEcoaction.html
@@ -52,7 +52,7 @@
                 rows="3"></textarea>
             </div>
             <div class="text-center">
-              <button type="button" id="finishBtn" class="btn btn-lg gbtn btn-secondary mb-2">Finish</button>
+              <button disabled type="button" id="finishBtn" class="btn btn-lg gbtn btn-secondary mb-2">Finish</button>
             </div>
           </form>
         </div>
