rename groups ecogroups

--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Groups</title>
+    <title>EcoGroups</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
@@ -31,7 +31,7 @@
     <header id="nav_bar"></header>
 
     <div id="h1-container" class="d-flex align-items-left">
-      <h1>Groups</h1>
+      <h1>EcoGroups</h1>
       <a id="create-new" class="green-button" href="group_creation.html">Create New</a>
     </div>
 
@@ -41,8 +41,6 @@
         <div id="groups-go-here" class="justify-content-center row row-cols-auto"></div>
       </div>
     </div>
-
-    
 
     <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
