refactor ecoPoints variable and update display in finishEcoaction

--- a/public/html/finishEcoaction.html
+++ b/public/html/finishEcoaction.html
@@ -18,8 +18,8 @@
               <h1 id="name" class="m-0 p-0">Ecoaction Name</h1>
 
               <div class="d-flex align-items-center justify-content-center">
-                <p id="points" class="m-0"></p>
                 <img src="/assets/images/coin.png" class="coin m-0">
+                <p id="ecoPoints" class="m-0"></p>
             </div>
               <h6 id="shortDescription"></h6>
               <p id="description"></p>
