--- a/public/html/app_shell/nav_bar.html
+++ b/public/html/app_shell/nav_bar.html
@@ -1,8 +1,7 @@
 <nav id="nav" class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="/html/ecoactions.html">
-      <img id="logo" src="/assets/images/logo.svg" height="36" />
-      EcoAction
+      <img id="logo" src="/assets/logo2.png" height="60" />
     </a>
 
     <!-- Profile for small screens -->
