--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,19 +7,21 @@
   </head>
 
   <body>
-    <header></header>
+    <header>
+      <img src="/assets/logo2.png" alt="EcoAction" />
+    </header>
 
     <main class="container">
-      <div class="p-5 pb-3 rounded-5">
-        <div class="container-fluid py-5">
-          <h1 class="display-5 fw-bold">Welcome to EcoAction</h1>
-          <p class="col-md-8 fs-4">
-            Join us in making a difference for our planet. Start your eco-friendly journey today!
-          </p>
-          <button onclick="window.location.href='/login'" id="login" type="button">
-            Login / Signup
-          </button>
-        </div>
+      <div
+        id="container"
+        class="container-fluid d-flex flex-column align-items-center text-center justify-content-center">
+        <h1 class="display-5 fw-bold">Welcome</h1>
+        <p class="col-md-8 fs-4">
+          Join us in making a difference for our planet. Start your eco-friendly journey today!
+        </p>
+        <button onclick="window.location.href='/login'" id="login" type="button">
+          Login / Signup
+        </button>
       </div>
 
       <div class="row row-cols-1 row-cols-md-3 g-4">
