--- a/public/html/login.html
+++ b/public/html/login.html
@@ -23,14 +23,14 @@
   <body>
     <div id="container">
       <div id="logo-wrapper">
-        <img id="logo" src="/assets/logo.png" alt="EcoAction" />
+        <img id="logo" src="/assets/logo2.png" alt="EcoAction" />
       </div>
       <div id="form-container">
         <h1 id="form-title">Login / Signup</h1>
         <div id="firebase-ui-auth-container"></div>
         <div id="align-demo">
           <div id="demo-wrapper">
-            <a class="animated-arrow" href="/html/daily_challenges.html">
+            <a class="animated-arrow" href="/html/ecoactions.html">
               <span class="the-arrow -left">
                 <span class="shaft"></span>
               </span>
