--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -42,7 +42,7 @@
         <div id="completed-ecoaction-count-wrapper">
           <canvas id="completed-ecoaction-count"></canvas>
         </div>
-        <canvas id="ecopoints-over-time"></canvas>
+        <canvas id="weekly-ecopoints-over-time"></canvas>
       </div>
     </main>
 
