Implemented Search.js (currently unused)

--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -53,5 +53,6 @@
       defer></script>
     <script type="module" src="/scripts/app_shell.js"></script>
     <script type="module" src="/scripts/groups.js"></script>
+    <script type="module" src="/scripts/search.js"></script>
   </body>
 </html>
