--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -29,9 +29,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <link rel="stylesheet" href="/css/stats.css" />
-    <script type="module" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/scripts/load-component.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@4.1.0/cdn.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
   </head>
   <body>
     <header id="nav_bar"></header>
@@ -39,10 +42,14 @@
     <main>
       <h1>My Stats</h1>
       <div id="stats-container">
-        <div id="completed-ecoaction-count-wrapper">
-          <canvas id="completed-ecoaction-count"></canvas>
+        <div id="doughnuts-container">
+          <div id="missed-completed-ecoaction-count-wrapper">
+            <canvas id="missed-completed-ecoaction-count"></canvas>
+          </div>
         </div>
-        <canvas id="weekly-ecopoints-over-time"></canvas>
+        <div id="weekly-ecopoints-over-time-wrapper">
+          <canvas id="weekly-ecopoints-over-time"></canvas>
+        </div>
       </div>
     </main>
 
