consistent file names, further stats page refinements

--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Profile</title>
-    <script type="module" src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app-shell.js"></script>
     <link rel="stylesheet" href="/css/profile.css">
 </head>
 
