--- a/public/html/404.html
+++ b/public/html/404.html
@@ -17,6 +17,6 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       defer></script>
-    <script type="module" src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app-shell.js"></script>
   </body>
 </html>
