--- a/public/html/app_shell/footer.html
+++ b/public/html/app_shell/footer.html
@@ -1,136 +1,118 @@
-<footer
-class="footer text-center text-lg-start text-white">
-<!-- Grid container -->
-<div class="p-4 pb-0">
-<!-- Section: Links -->
-<section class="">
-<!--Grid row-->
-<div class="row">
-<!-- Grid column -->
-<div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-  <h6 class="text-uppercase mb-4 font-weight-bold">
-    EcoAction
-  </h6>
-  <p>
-    Empowering communities to take action for a sustainable future. Together, we can make a difference.
-  </p>
-</div>
-<!-- Grid column -->
+<footer class="footer text-center text-lg-start text-white">
+  <!-- Grid container -->
+  <div class="p-4 pb-0">
+    <!-- Section: Links -->
+    <section class="">
+      <!--Grid row-->
+      <div class="row">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">EcoAction</h6>
+          <p>
+            Empowering communities to take action for a sustainable future. Together, we can make a
+            difference.
+          </p>
+        </div>
+        <!-- Grid column -->
 
-<hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none" />
 
-<!-- Grid column -->
-<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-  <h6 class="text-uppercase mb-4 font-weight-bold">Initiatives</h6>
-  <p>
-    <a class="text-white">Cleanups</a>
-  </p>
-  <p>
-    <a class="text-white">Tree Planting</a>
-  </p>
-  <p>
-    <a class="text-white">Recycling</a>
-  </p>
-  <p>
-    <a class="text-white">Education</a>
-  </p>
-</div>
-<!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Initiatives</h6>
+          <p>
+            <a class="text-white">Cleanups</a>
+          </p>
+          <p>
+            <a class="text-white">Tree Planting</a>
+          </p>
+          <p>
+            <a class="text-white">Recycling</a>
+          </p>
+          <p>
+            <a class="text-white">Education</a>
+          </p>
+        </div>
+        <!-- Grid column -->
 
-<hr class="w-100 clearfix d-md-none" />
+        <hr class="w-100 clearfix d-md-none" />
 
-<!-- Grid column -->
-<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-  <h6 class="text-uppercase mb-4 font-weight-bold">
-    Useful links
-  </h6>
-  <p>
-    <a class="text-white">Your Impact</a>
-  </p>
-  <p>
-    <a class="text-white">Volunteer</a>
-  </p>
-  <p>
-    <a class="text-white">Donate</a>
-  </p>
-  <p>
-    <a class="text-white">Contact Us</a>
-  </p>
-</div>
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
+          <p>
+            <a class="text-white">Your Impact</a>
+          </p>
+          <p>
+            <a class="text-white">Volunteer</a>
+          </p>
+          <p>
+            <a class="text-white">Donate</a>
+          </p>
+          <p>
+            <a class="text-white">Contact Us</a>
+          </p>
+        </div>
 
-<!-- Grid column -->
-<hr class="w-100 clearfix d-md-none" />
+        <!-- Grid column -->
+        <hr class="w-100 clearfix d-md-none" />
 
-<!-- Grid column -->
-<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-  <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-  <p><i class="fas fa-home mr-3"></i> Vancouver, BC, Canada</p>
-  <p><i class="fas fa-envelope mr-3"></i> info@ecoaction.com</p>
-  <p><i class="fas fa-phone mr-3"></i> + 1 234 567 890</p>
-  <p><i class="fas fa-print mr-3"></i> + 1 234 567 891</p>
-</div>
-<!-- Grid column -->
-</div>
-<!--Grid row-->
-</section>
-<!-- Section: Links -->
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+          <p><i class="fas fa-home mr-3"></i> Vancouver, BC, Canada</p>
+          <p><i class="fas fa-envelope mr-3"></i> info@ecoaction.com</p>
+          <p><i class="fas fa-phone mr-3"></i> + 1 234 567 890</p>
+          <p><i class="fas fa-print mr-3"></i> + 1 234 567 891</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!--Grid row-->
+    </section>
+    <!-- Section: Links -->
 
-<hr class="my-3">
+    <hr class="my-3" />
 
-<!-- Section: Copyright -->
-<section class="p-3 pt-0">
-<div class="row d-flex align-items-center">
-<!-- Grid column -->
-<div class="col-md-7 col-lg-8 text-center text-md-start">
-  <!-- Copyright -->
-  <div class="p-3">
-    © 2023 Copyright:
-    <a class="text-white" href="https://ecoaction.com/"
-       >EcoAction.com</a
-      >
+    <!-- Section: Copyright -->
+    <section class="p-3 pt-0">
+      <div class="row d-flex align-items-center">
+        <!-- Grid column -->
+        <div class="col-md-7 col-lg-8 text-center text-md-start">
+          <!-- Copyright -->
+          <div class="p-3">
+            © 2025
+            <a class="text-white" href="https://ecoaction.com/">EcoAction.com</a>
+          </div>
+          <!-- Copyright -->
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
+          <!-- Facebook -->
+          <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+
+          <!-- Twitter -->
+          <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"
+            ><i class="fab fa-twitter"></i
+          ></a>
+
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"
+            ><i class="fab fa-instagram"></i
+          ></a>
+
+          <!-- LinkedIn -->
+          <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+        </div>
+        <!-- Grid column -->
+      </div>
+    </section>
+    <!-- Section: Copyright -->
   </div>
-  <!-- Copyright -->
-</div>
-<!-- Grid column -->
-
-<!-- Grid column -->
-<div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
-  <!-- Facebook -->
-  <a
-     class="btn btn-outline-light btn-floating m-1"
-     class="text-white"
-     role="button"
-     ><i class="fab fa-facebook-f"></i
-    ></a>
-
-  <!-- Twitter -->
-  <a
-     class="btn btn-outline-light btn-floating m-1"
-     class="text-white"
-     role="button"
-     ><i class="fab fa-twitter"></i
-    ></a>
-
-  <!-- Instagram -->
-  <a
-     class="btn btn-outline-light btn-floating m-1"
-     class="text-white"
-     role="button"
-     ><i class="fab fa-instagram"></i
-    ></a>
-
-  <!-- LinkedIn -->
-  <a
-     class="btn btn-outline-light btn-floating m-1"
-     class="text-white"
-     role="button"
-     ><i class="fab fa-linkedin-in"></i
-    ></a>
-</div>
-<!-- Grid column -->
-</div>
-</section>
-<!-- Section: Copyright -->
-</div>
-<!-- Grid container -->
+  <!-- Grid container -->
 </footer>
