--- a/public/html/app_shell/head.html
+++ b/public/html/app_shell/head.html
@@ -10,7 +10,7 @@
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
   crossorigin="anonymous" />
 <link rel="stylesheet" href="/css/theme.css" />
-<link rel="stylesheet" href="/css/app_shell/navbar.css" />
-<link rel="stylesheet" href="/css/app_shell/footer_navbar.css" />
-<link rel="stylesheet" href="/css/app_shell/footer.css" />
-<link rel="stylesheet" href="/css/app_shell/app_shell.css" />
+<link rel="stylesheet" href="/css/app-shell/navbar.css" />
+<link rel="stylesheet" href="/css/app-shell/footer-navbar.css" />
+<link rel="stylesheet" href="/css/app-shell/footer.css" />
+<link rel="stylesheet" href="/css/app-shell/app-shell.css" />
