--- a/public/html/finish-animation.html
+++ b/public/html/finish-animation.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Completed</title>
-    <link rel="stylesheet" href="/css/finishAnimation.css" />
+    <link rel="stylesheet" href="/css/finish-animation.css" />
   </head>
   <body>
     <header id="nav_bar"></header>
@@ -22,7 +22,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       defer></script>
-    <script type="module" src="/scripts/app_shell.js"></script>
-    <script src="/scripts/finishAnimation.js"></script>
+    <script type="module" src="/scripts/app-shell.js"></script>
+    <script src="/scripts/finish-animation.js"></script>
   </body>
 </html>
