--- a/public/html/finish-ecoaction.html
+++ b/public/html/finish-ecoaction.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Finish Ecoaction</title>
-    <link rel="stylesheet" href="/css/finishEcoaction.css" />
+    <link rel="stylesheet" href="/css/finish-ecoaction.css" />
   </head>
 
   <body>
@@ -18,12 +18,12 @@
               <h1 id="name" class="m-0 p-0">Ecoaction Name</h1>
 
               <div class="d-flex align-items-center justify-content-center">
-                <img src="/assets/images/coin.png" class="coin m-0">
+                <img src="/assets/images/coin.png" class="coin m-0" />
                 <p id="ecoPoints" class="m-0"></p>
-            </div>
+              </div>
               <h6 id="shortDescription"></h6>
               <p id="description"></p>
-             </div>
+            </div>
           </div>
 
           <form>
@@ -32,12 +32,7 @@
             </div>
             <div class="mb-3">
               <label for="image" class="form-label">Select an Image to Post</label>
-              <input
-                type="file"
-                class="form-control"
-                id="image"
-                name="image"
-                accept="image/*" />
+              <input type="file" class="form-control" id="image" name="image" accept="image/*" />
             </div>
             <div class="mb-3">
               <label for="title" class="form-label">Post Title</label>
@@ -52,7 +47,13 @@
                 rows="3"></textarea>
             </div>
             <div class="text-center">
-              <button disabled type="button" id="finishBtn" class="btn btn-lg gbtn btn-secondary mb-2">Finish</button>
+              <button
+                disabled
+                type="button"
+                id="finishBtn"
+                class="btn btn-lg gbtn btn-secondary mb-2">
+                Finish
+              </button>
             </div>
           </form>
         </div>
@@ -64,7 +65,7 @@
     <footer id="footer"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="/scripts/app_shell.js"></script>
-    <script type="module" src="/scripts/finishEcoaction.js"></script>
+    <script type="module" src="/scripts/app-shell.js"></script>
+    <script type="module" src="/scripts/finish-ecoaction.js"></script>
   </body>
 </html>
