--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -32,20 +32,22 @@
 
     <div id="h1-container" class="d-flex align-items-left">
       <h1>EcoGroups</h1>
-      <a id="create-new" class="green-button" href="group_creation.html">Create New</a>
+      <a id="create-new" class="green-button" href="group-creation.html">Create New</a>
     </div>
 
-    <form id="search-box" class="justify-content-center" style="margin-left: auto; margin-right: auto;">
+    <form
+      id="search-box"
+      class="justify-content-center"
+      style="margin-left: auto; margin-right: auto">
       <div class="row">
         <div class="col">
-          <input type="text" id="search-bar" class="form-control" placeholder="Search">
+          <input type="text" id="search-bar" class="form-control" placeholder="Search" />
         </div>
         <div class="col">
           <button type="button" id="search-button" class="btn btn-primary mb-2">Search</button>
         </div>
       </div>
     </form>
-
 
     <div class="container mb-3">
       <!-- Here is the container for cards  -->
@@ -54,8 +56,6 @@
       </div>
     </div>
 
-    
-
     <!-- JAVASCRIPT -->
     <nav id="footer-nav"></nav>
     <footer id="footer"></footer>
@@ -63,7 +63,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       defer></script>
-    <script type="module" src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app-shell.js"></script>
     <script type="module" src="/scripts/groups.js"></script>
     <script type="module" src="/scripts/search.js"></script>
   </body>
