--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Welcome</title>
     <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/app_shell/navbar.css" />
+    <link rel="stylesheet" href="/css/app-shell/navbar.css" />
   </head>
 
   <body>
@@ -80,7 +80,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       defer></script>
-    <script type="module" src="/scripts/app_shell.js"></script>
+    <script type="module" src="/scripts/app-shell.js"></script>
     <!-- Find icons at https://fontawesome.com/icons, we're using solid style -->
     <script src="https://kit.fontawesome.com/0eda3376bd.js" crossorigin="anonymous"></script>
   </body>
