--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -14,10 +14,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="/css/theme.css" />
-    <link rel="stylesheet" href="/css/app_shell/navbar.css" />
-    <link rel="stylesheet" href="/css/app_shell/footer_navbar.css" />
-    <link rel="stylesheet" href="/css/app_shell/footer.css" />
-    <link rel="stylesheet" href="/css/app_shell/app_shell.css" />
+    <link rel="stylesheet" href="/css/app-shell/navbar.css" />
+    <link rel="stylesheet" href="/css/app-shell/footer-navbar.css" />
+    <link rel="stylesheet" href="/css/app-shell/footer.css" />
+    <link rel="stylesheet" href="/css/app-shell/app-shell.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bar_chart" />
@@ -38,7 +38,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
   </head>
   <body>
-    <header id="nav_bar"></header>
+    <header id="nav-bar"></header>
 
     <div id="loader">
       <div class="tree">
@@ -142,9 +142,9 @@
     <script type="module">
       import { toggleStatsContainer } from "/scripts/stats.js";
 
-      loadComponent("nav_bar", "/html/app_shell/nav_bar.html");
+      loadComponent("nav-bar", "/html/app-shell/nav-bar.html");
       (async () => {
-        await loadComponent("footer-nav", "/html/app_shell/footer-nav.html");
+        await loadComponent("footer-nav", "/html/app-shell/footer-nav.html");
         await lucide.createIcons();
         document.querySelectorAll(".arrow-wrapper .lucide").forEach((arrow) => {
           arrow.addEventListener("click", (event) => {
@@ -153,7 +153,7 @@
           });
         });
       })();
-      loadComponent("footer", "/html/app_shell/footer.html");
+      loadComponent("footer", "/html/app-shell/footer.html");
     </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
