rename navbar loading element

--- a/public/html/finish-animation.html
+++ b/public/html/finish-animation.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/css/finish-animation.css" />
   </head>
   <body>
-    <header id="nav_bar"></header>
+    <header id="nav-bar"></header>
 
     <!-- BODY -->
     <main>
