--- a/public/html/group.html
+++ b/public/html/group.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/groups.css" />
   </head>
   <body>
-    <header id="nav_bar"></header>
+    <header id="nav-bar"></header>
 
     <template id="challengeTemplate">
       <div class="card">
