--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -28,7 +28,7 @@
       </div>
     </template>
 
-    <header id="nav_bar"></header>
+    <header id="nav-bar"></header>
 
     <div id="h1-container" class="d-flex align-items-left">
       <h1>EcoGroups</h1>
