--- a/public/html/help.html
+++ b/public/html/help.html
@@ -13,7 +13,7 @@
       href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
   </head>
   <body>
-    <header id="nav_bar"></header>
+    <header id="nav-bar"></header>
 
     <!-- BODY -->
 
