--- a/public/html/404.html
+++ b/public/html/404.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <div id="nav_bar"></div>
+      <div id="nav-bar"></div>
     </header>
 
     <div class="d-flex align-items-center" style="height: 100%; width: 100%; text-align: center">
