--- a/public/html/group-creation.html
+++ b/public/html/group-creation.html
@@ -13,7 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
   </head>
   <body>
-    <header id="nav_bar"></header>
+    <header id="nav-bar"></header>
 
     <template id="challengeTemplate">
       <div class="card">
