--- a/public/html/profile-public.html
+++ b/public/html/profile-public.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/css/settings.css">
 </head>
 <body>
-    <header id="nav_bar"></header>
+    <header id="nav-bar"></header>
     
     <main class="container">
         <div class="center">
