--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div id="nav_bar"></div>
+        <div id="nav-bar"></div>
     </header>
 
     <main class="container">
