--- a/public/html/app-shell/head.html
+++ b/public/html/app-shell/head.html
@@ -1,4 +1,4 @@
-<link rel="icon" type="image/x-icon" href="/assets/images/ecoaction.ico" />
+<link rel="icon" type="image/x-icon" href="/assets/logo2.png" />
 
 <meta name="comp1800 template" content="EcoAction App" />
 <meta charset="utf-8" />
