--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -21,7 +21,7 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bar_chart" />
-    <link rel="icon" type="image/x-icon" href="/assets/images/ecoaction.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/logo2.png" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
