stats page refinements

--- a/public/html/app-shell/nav-bar.html
+++ b/public/html/app-shell/nav-bar.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="/html/groups.html">EcoGroups</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/html/stats.html">Explore</a>
+          <a class="nav-link" href="">Explore</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/html/stats.html">Stats</a>
