refactor stats backend p2

--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -97,10 +97,10 @@
             <span class="kpi-value"></span>
             <span class="kpi-label">Completed EcoActions</span>
           </div>
-          <div id="this-week-missed-ecoactions" class="widget">
+          <!-- <div id="this-week-missed-ecoactions" class="widget">
             <span class="kpi-value"></span>
             <span class="kpi-label">Missed EcoActions</span>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -121,18 +121,22 @@
             <span class="kpi-value"></span>
             <span class="kpi-label">Completed EcoActions</span>
           </div>
-          <div id="lifetime-missed-ecoactions" class="widget">
+          <div id="lifetime-ecogroups" class="widget">
+            <span class="kpi-value"></span>
+            <span class="kpi-label">EcoGroups</span>
+          </div>
+          <!-- <div id="lifetime-missed-ecoactions" class="widget">
             <span class="kpi-value"></span>
             <span class="kpi-label">Missed EcoActions</span>
-          </div>
+          </div> -->
         </div>
-        <div id="doughnuts-container">
+        <div id="container">
           <div id="ecoactions-breakdown-wrapper" class="widget">
             <canvas id="ecoactions-breakdown"></canvas>
           </div>
-        </div>
-        <div id="weekly-ecopoints-over-time-wrapper" class="widget">
-          <canvas id="weekly-ecopoints-over-time"></canvas>
+          <div id="weekly-ecopoints-over-time-wrapper" class="widget">
+            <canvas id="weekly-ecopoints-over-time"></canvas>
+          </div>
         </div>
       </div>
     </main>
