refactored stats backend to minimize firebase db queries, added nodemon for auto backend reloading, created donut this week ecopoints breakdown donut chart and other stats page styling

--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -89,13 +89,12 @@
       </h2>
       <div id="this-week-container" class="stats-container">
         <div class="kpis">
-          <div id="this-week-ecopoints" class="widget">
-            <span class="kpi-value"></span>
-            <span class="kpi-label">EcoPoints</span>
+          <div id="this-week-ecopoints-breakdown-wrapper" class="widget">
+            <canvas id="this-week-ecopoints-breakdown"></canvas>
           </div>
           <div id="this-week-completed-ecoactions" class="widget">
             <span class="kpi-value"></span>
-            <span class="kpi-label">Completed EcoActions</span>
+            <span class="kpi-label">Completed<br />EcoActions</span>
           </div>
           <!-- <div id="this-week-missed-ecoactions" class="widget">
             <span class="kpi-value"></span>
@@ -119,7 +118,7 @@
           </div>
           <div id="lifetime-completed-ecoactions" class="widget">
             <span class="kpi-value"></span>
-            <span class="kpi-label">Completed EcoActions</span>
+            <span class="kpi-label">Completed<br />EcoActions</span>
           </div>
           <div id="lifetime-ecogroups" class="widget">
             <span class="kpi-value"></span>
