feat: update ecoactions.html to encourage group joining for more ecoActions

--- a/public/html/ecoactions.html
+++ b/public/html/ecoactions.html
@@ -17,8 +17,9 @@
         </div>
         <div id="dailyChallenges-go-here"></div>
         <div class="text-center">
+          <p>Join Groups To See More EcoActions</p>
           <a type="button" href="/html/groups.html" class="btn btn-lg gbtn btn-secondary mb-2">
-            Add Ecoactions
+            Join Group
           </a>
         </div>
       </div>
