styling welcome page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -21,8 +21,8 @@
       <div
         id="container"
         class="container-fluid d-flex flex-column align-items-center text-center justify-content-center">
-        <h1 class="display-5 pt-5 fw-bold">Empowering Everyday Green Heroes</h1>
-        <p class="p-1 col-md-7 fs-6">
+        <h1 class="display-5 pt-5 fw-bold">Unite & transform your green commitment.</h1>
+        <p class="pt-2 col-md-7 fs-5.9">
           Feeling isolated in your eco-efforts? EcoAction connects you with a community that
           transforms personal commitment into collective impact. Track your eco-friendly actions,
           join group challenges, and see real change through gamified progress and visual insights.
